updated Readme and package info specific to forked repo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic_api_lecture",
+  "name": "prime_weekend_chal_02",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
