--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
     "express": "^4.13.3",
     "jquery": "^2.1.4",
     "path": "^0.11.14"
-  }
+  },
+  "repository": "https://github.com/kdszafranski/prime_weekend_chal_02"
 }
