--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iota_peer_modulemadness",
+  "name": "prime_peer_challenge_4",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
