--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.7",
+    "body-parser": "^1.15.2",
     "bootstrap": "^3.3.6",
     "express": "^4.14.0"
   }
